--- a/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/register.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/tcm/cadd/register.xhtml
@@ -51,10 +51,10 @@
 
                             <f:facet name="footer">
                                 <div class="Container100" style="text-align: center;">
-                                    <p:commandButton value="Review"
+                                    <p:commandButton value="Review" id="newregreview"
                                                      update=":ceForm:inputArea"
                                                      actionListener="#{tcmpb.gotoReview}"/>
-                                    <p:commandButton value="Open Account" type="submit"
+                                    <p:commandButton value="Open Account" type="submit" id="newregopenacct"
                                                      update=":ceForm:inputArea"
                                                      actionListener="#{tcmpb.gotoCustody}"/>
                                 </div>
