--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/funding.xhtml
@@ -736,7 +736,7 @@
                                        style="text-align: left !important; font-weight: bold !important;">Bank Account Title <span class="Fs12">(Please provide full title of the account)</span> *</label>
 
                                 <div class="EmptyBox5"></div>
-                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive" disabled="#{tdcto.tdMasterData.copyAchInstructions}"
+                                <p:inputText styleClass="Wid100 FS14 CustomWidthFA-Responsive" id="fundrecbatitle" disabled="#{tdcto.tdMasterData.copyAchInstructions}"
                                              value="#{tdcto.tdMasterData.electroicBankDetail.bankAcctName}"
                                              maxlength="90"
                                              placeholder="Bank Account Title">
