--- a/Invessence/modules/web/src/main/webapp/pages/consumer/uob/index3.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/uob/index3.xhtml
@@ -224,7 +224,7 @@
 											<div class="nIconContent Wid100">
 												<i class="fa fa-user"></i>
 											</div>
-											<div class="nLabelContent Wid100">Account</div>
+											<div class="nLabelContent Wid100">Add Account</div>
 										</div>
 									</div>
 									<div class="Fleft nblock">
