Abhang checked in 05/19/2017 File Processor Code

--- a/Invessence/modules/web/src/main/webapp/pages/advisor/trade.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/advisor/trade.xhtml
@@ -158,7 +158,7 @@
                                     </div>
                                     <div class="Fright" style="margin-top: 9px;">
 
-                                        <p:commandButton styleClass="advButton" value="Download"/>
+                                        <p:commandButton styleClass="advButton" value="Download" actionListener="#{fileProcessBean.processDownloadFile('DOWD1')}"/>
                                     </div>
                                 </div>
                              </p:panel>
