--- a/Invessence/modules/web/src/main/webapp/mobile.xhtml
+++ b/Invessence/modules/web/src/main/webapp/mobile.xhtml
@@ -6,7 +6,7 @@
                 template="/template/common/simple.xhtml">
 
 <f:metadata>
-    <f:event listener="#{sessionControl.preRenderView}" type="preRenderView"/>
+    <f:event listener="#{sessionControl.mobileRenderView}" type="preRenderView"/>
 </f:metadata>
 
 <ui:define name="content">
