--- a/Invessence/modules/web/src/main/webapp/pages/custody/td/cedit.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/custody/td/cedit.xhtml
@@ -125,7 +125,7 @@
                                     <p:commandButton value="Save and Submit"
                                                      update=":ctoForm:tdaccordian, :ctoForm:errorMsg" process="@form"
                                                      disabled="#{tdEditFund.tdMasterData.optFund and tdEditFund.tdMasterData.recurringFlag}"
-                                                     actionListener="#{tdEditFund.editFunddataSave}"
+                                                     actionListener="#{tdEditFund.editFunddaTesttaSave}"
                                                      styleClass="Fright" >
 
                                     </p:commandButton>
