--- a/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/login.xhtml
+++ b/Invessence/modules/web/src/main/webapp/pages/consumer/citi/demo/login.xhtml
@@ -1,14 +1,8 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
-                xmlns:f="http://java.sun.com/jsf/core"
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 xmlns:p="http://primefaces.org/ui"
-                xmlns:pe="http://primefaces.org/ui/extensions"
                 template="/template/common/simple.xhtml">
-
-    <f:metadata>
-        <f:viewParam name="acct" value="#{userBean.beanCustID}"/>
-    </f:metadata>
 
     <ui:define name="content">
 
@@ -19,36 +13,28 @@
                 <div class="Container90 Fnone MarAuto TexAlCenter">
                     <h:form id="logonForm" prependId="false" styleClass="formPage">
                         <div class="EmptyBox50"></div>
-                        <h:graphicImage id="logo" name="#{uiLayout.logo}" styleClass="Fleft" library="invessence"
+                        <h:graphicImage id="logo" name="#{webutil.webprofile.logo}" styleClass="Fleft" library="invessence"
                                         class="MarAuto MarTop20 MarBot10 sitelogologin"/>
                         <div class="EmptyBox20"></div>
                         <p:messages id="messages" autoUpdate="true"/>
                         <p:inputText id="j_username" placeholder="Username" style="background: #f2f2f2;" styleClass="Container80 Fnone MarAuto Fs18"
                                      required="true"
                                      requiredMessage="Please enter UserID."
-                                     value="#{loginController.userID}">
+                                     value="#{citidemo.linkedinUserID}">
                         </p:inputText>
                         <div class="EmptyBox10"></div>
-                        <p:password id="j_password"  placeholder="Password" style="background: #f2f2f2;" styleClass="Container80 Fnone MarAuto Fs18"
-                                    feedback="false" value="#{loginController.password}"
+                        <p:password id="j_password"  placeholder="Password" style="background: #f2f2f2;"
+                                    styleClass="Container80 Fnone MarAuto Fs18"
+                                    feedback="false" value="#{citidemo.linkedinPassword}"
                                     requiredMessage="Please enter Password."/>
                         <div class="EmptyBox5"></div>
-                        <h:outputLabel styleClass="Container80 Fnone MarAuto Fs18"
-                                       id="question"
-                                       value="#{loginController.question}"
-                                       rendered="#{loginController.needAdditionalInfo}">
-                        </h:outputLabel>
-                        <div class="EmptyBox10"></div>
-                        <h:inputText styleClass="Container80 Fnone MarAuto Fs18"
-                                     id="ans" placeholder="Answer" required="true"
-                                     value="#{loginController.answer}"
-                                     rendered="#{loginController.needAdditionalInfo}">
-                        </h:inputText>
                         <div class="EmptyBox20"></div>
-                        <p:button  value="Sign In with LinkedIn" styleClass="Fs16 linkedinbutton citibutton" href="Demo.xhtml"></p:button>
+                        <p:commandButton  value="Sign In with LinkedIn"
+                                   styleClass="Fs16 linkedinbutton citibutton"
+                                   actionListener="#{citidemo.logon}">
+                        </p:commandButton>
 
                         <div class="EmptyBox20"></div>
-                        <div class="Seperator"></div>
                         <div class="EmptyBox20"></div>
 
                     </h:form>
